Fix CSS alignment issues and paragraph padding

--- a/themes/SL/static/css/base.css
+++ b/themes/SL/static/css/base.css
@@ -187,11 +187,13 @@ i {
     color: #002e5f;
     margin-left: 0.2em;
     margin-right: 0.3em;
+    font-size: 1.25rem;
 }
 
 .i-categories-align {
-    margin-right: 0.2em;
     color: #006BFF;
+    margin-right: 0.2em;
+    vertical-align: text-bottom;
 }
 
 #bg-darker {
@@ -216,6 +218,13 @@ dl {
     line-height: 1.25;
 }
 /* end BASE TEMPLATE */
+
+/* ABOUT PAGE */
+p.larger-p-padding {
+    padding: 1rem;
+}
+
+/* end ABOUT PAGE */
 
 /* SCROLLBAR */
 body::-webkit-scrollbar {
@@ -380,6 +389,7 @@ div#author-footer {
     margin-left: auto;
     margin-right: auto;
     max-width: 60%;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 #contentinfo a {
@@ -427,6 +437,10 @@ section#content:after {
     padding: 0.5rem;
 }
 
+#post-list>.card-body>ul>li {
+    margin-left: 0;
+}
+
 /* Clears up issue with borders around PNG images */
 .entry-content p a:not([href$=".png"]) {
     background-color: #e5f1ff;
@@ -459,8 +473,8 @@ section#content:after {
 }
 
 .position-comments-count {
+    padding: 1.5rem 0.5rem 1rem 1rem;
     text-align: right;
-    padding: 1em;
 }
 
 .position-comments-count a:link,
@@ -643,6 +657,7 @@ button:focus {
     padding: .5em .5em;
     border-radius: 0;
     border: 1px solid #002e5f;
+    font-size: 1rem;
 }
 
 .container {
@@ -919,13 +934,16 @@ h6,
 
 @media (min-width: 700px) {
 
+    p.larger-p-padding {
+        padding: 2.5rem;
+    }
+
     #bg-darker {
         background-size: 25%;
     }
 
     .max-size-img-profile {
-        max-width: 80%;
-        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+        max-width: 70%;
     }
 
 
